// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tabs has small styles 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.75rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-1x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: var(--font-semi-bold);
}

.c9:hover {
  color: #000000;
}

.c9::after {
  bottom: 0;
  content: '';
  display: block;
  height: 0.125rem;
  left: 0;
  position: absolute;
  width: 100%;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9::after {
  background-color: #006296;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.75rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-1x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:hover {
  color: #000000;
}

.c12::after {
  bottom: 0;
  content: '';
  display: block;
  height: 0.125rem;
  left: 0;
  position: absolute;
  width: 100%;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c12:active::after {
  background-color: #012639 !important;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c11:hover .c8::after {
  background-color: #DBDEE1;
  color: #000000;
}

.c10::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c14 {
  border-top: none;
}

.c14:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c0::before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: tabs;
  height: var(--size-2halfx);
  overflow: hidden;
  position: relative;
}

.c5 {
  -webkit-mask-image: linear-gradient( 90deg, #000 0px,#000 calc(100% - var(--size-2x)), #000 100% );
  mask-image: linear-gradient( 90deg, #000 0px,#000 calc(100% - var(--size-2x)), #000 100% );
  overflow: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  height: var(--size-2halfx);
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2halfx);
  min-height: auto;
  padding: 0 var(--spacing-1x);
  position: absolute;
  width: var(--size-2x);
  z-index: 1;
  box-shadow: 3px 0 3px -2px rgba(0,0,0,0.1);
  left: 0;
}

.c4:hover {
  background: #DBDEE1;
}

.c4:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4.hidden {
  display: none;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2halfx);
  min-height: auto;
  padding: 0 var(--spacing-1x);
  position: absolute;
  width: var(--size-2x);
  z-index: 1;
  box-shadow: -3px 0 3px -2px rgba(0,0,0,0.1);
  right: 0;
}

.c13:hover {
  background: #DBDEE1;
}

.c13:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c13.hidden {
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 eds-Tabs-tablistContainer"
    >
      <button
        aria-hidden="true"
        class="c2 c3 c4 hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-left"
          width="16"
        />
      </button>
      <div
        class="c5"
      >
        <div
          aria-label="tabs label"
          class="c6"
          role="tablist"
        >
          <div
            class="c7"
            data-testid="tab-1"
          >
            <button
              aria-controls="tab-1-panel"
              aria-selected="true"
              class="c8 c9"
              data-testid="tab-1-button"
              id="tab-1"
              role="tab"
              type="button"
            >
              <span
                class="c10"
                data-content="button 1"
                data-testid="tab-1-text"
              >
                button 1
              </span>
            </button>
          </div>
          <div
            class="c11"
            data-testid="tab-2"
          >
            <button
              aria-controls="tab-2-panel"
              aria-selected="false"
              class="c8 c12"
              data-testid="tab-2-button"
              id="tab-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="c10"
                data-content="button 2"
                data-testid="tab-2-text"
              >
                button 2
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        class="c2 c3 c13 hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-right"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c14"
    id="tab-1-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c14"
    hidden=""
    id="tab-2-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot (mobile) 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: var(--font-semi-bold);
}

.c9:hover {
  color: #000000;
}

.c9::after {
  bottom: 0;
  content: '';
  display: block;
  height: 0.25rem;
  left: 0;
  position: absolute;
  width: 100%;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9::after {
  background-color: #006296;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:hover {
  color: #000000;
}

.c12::after {
  bottom: 0;
  content: '';
  display: block;
  height: 0.25rem;
  left: 0;
  position: absolute;
  width: 100%;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c12:active::after {
  background-color: #012639 !important;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c11:hover .c8::after {
  background-color: #DBDEE1;
  color: #000000;
}

.c10::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c14 {
  border-top: none;
}

.c14:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c0::before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: tabs;
  height: var(--size-2halfx);
  overflow: hidden;
  position: relative;
}

.c5 {
  -webkit-mask-image: linear-gradient( 90deg, #000 0px,#000 calc(100% - var(--size-2x)), #000 100% );
  mask-image: linear-gradient( 90deg, #000 0px,#000 calc(100% - var(--size-2x)), #000 100% );
  overflow: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  height: var(--size-2halfx);
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2halfx);
  min-height: auto;
  padding: 0 var(--spacing-1x);
  position: absolute;
  width: var(--size-2x);
  z-index: 1;
  box-shadow: 3px 0 3px -2px rgba(0,0,0,0.1);
  left: 0;
}

.c4:hover {
  background: #DBDEE1;
}

.c4:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4.hidden {
  display: none;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2halfx);
  min-height: auto;
  padding: 0 var(--spacing-1x);
  position: absolute;
  width: var(--size-2x);
  z-index: 1;
  box-shadow: -3px 0 3px -2px rgba(0,0,0,0.1);
  right: 0;
}

.c13:hover {
  background: #DBDEE1;
}

.c13:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c13.hidden {
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 eds-Tabs-tablistContainer"
    >
      <button
        aria-hidden="true"
        class="c2 c3 c4 hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-left"
          width="16"
        />
      </button>
      <div
        class="c5"
      >
        <div
          aria-label="tabs label"
          class="c6"
          role="tablist"
        >
          <div
            class="c7"
            data-testid="tab-1"
          >
            <button
              aria-controls="tab-1-panel"
              aria-selected="true"
              class="c8 c9"
              data-testid="tab-1-button"
              id="tab-1"
              role="tab"
              type="button"
            >
              <span
                class="c10"
                data-content="button 1"
                data-testid="tab-1-text"
              >
                button 1
              </span>
            </button>
          </div>
          <div
            class="c11"
            data-testid="tab-2"
          >
            <button
              aria-controls="tab-2-panel"
              aria-selected="false"
              class="c8 c12"
              data-testid="tab-2-button"
              id="tab-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="c10"
                data-content="button 2"
                data-testid="tab-2-text"
              >
                button 2
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        class="c2 c3 c13 hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-right"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c14"
    id="tab-1-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c14"
    hidden=""
    id="tab-2-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;

exports[`Tabs matches snapshot 1`] = `
.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c2:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
}

.c3:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c3:hover,
.c3[aria-expanded='true'] {
  background-color: rgb(0 0 0 / 0.15);
  border-color: transparent;
  color: #000000;
}

.c3[aria-disabled='true'] {
  background-color: transparent;
  border-color: transparent;
  color: #B7BBC2;
  cursor: not-allowed;
  pointer-events: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #1B1C1E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-weight: var(--font-semi-bold);
}

.c9:hover {
  color: #000000;
}

.c9::after {
  bottom: 0;
  content: '';
  display: block;
  height: 0.25rem;
  left: 0;
  position: absolute;
  width: 100%;
}

.c9:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c9::after {
  background-color: #006296;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: var(--font-family);
  font-size: 0.875rem;
  gap: var(--spacing-half);
  padding: 0 var(--spacing-2x);
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:hover {
  color: #000000;
}

.c12::after {
  bottom: 0;
  content: '';
  display: block;
  height: 0.25rem;
  left: 0;
  position: absolute;
  width: 100%;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c12:active {
  color: #1B1C1E;
  font-weight: var(--font-semi-bold);
}

.c12:active::after {
  background-color: #012639 !important;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c11:hover .c8::after {
  background-color: #DBDEE1;
  color: #000000;
}

.c10::after {
  content: attr(data-content);
  display: block;
  font-weight: var(--font-semi-bold);
  height: 0;
  visibility: hidden;
}

.c14 {
  border-top: none;
}

.c14:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 100%;
}

.c0::before {
  border-bottom: 1px solid #DBDEE1;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-area: tabs;
  height: var(--size-2halfx);
  overflow: hidden;
  position: relative;
}

.c5 {
  -webkit-mask-image: linear-gradient( 90deg, #000 0px,#000 calc(100% - var(--size-2x)), #000 100% );
  mask-image: linear-gradient( 90deg, #000 0px,#000 calc(100% - var(--size-2x)), #000 100% );
  overflow: hidden;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--spacing-half);
  height: var(--size-2halfx);
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  white-space: nowrap;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2halfx);
  min-height: auto;
  padding: 0 var(--spacing-1x);
  position: absolute;
  width: var(--size-2x);
  z-index: 1;
  box-shadow: 3px 0 3px -2px rgba(0,0,0,0.1);
  left: 0;
}

.c4:hover {
  background: #DBDEE1;
}

.c4:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c4.hidden {
  display: none;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: inherit;
  border-bottom: 1px solid #DBDEE1;
  border-radius: 0;
  bottom: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2halfx);
  min-height: auto;
  padding: 0 var(--spacing-1x);
  position: absolute;
  width: var(--size-2x);
  z-index: 1;
  box-shadow: -3px 0 3px -2px rgba(0,0,0,0.1);
  right: 0;
}

.c13:hover {
  background: #DBDEE1;
}

.c13:focus-visible {
  box-shadow: 0 0 0 0 transparent;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c13.hidden {
  display: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 eds-Tabs-tablistContainer"
    >
      <button
        aria-hidden="true"
        class="c2 c3 c4 hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-left"
          width="16"
        />
      </button>
      <div
        class="c5"
      >
        <div
          aria-label="tabs label"
          class="c6"
          role="tablist"
        >
          <div
            class="c7"
            data-testid="tab-1"
          >
            <button
              aria-controls="tab-1-panel"
              aria-selected="true"
              class="c8 c9"
              data-testid="tab-1-button"
              id="tab-1"
              role="tab"
              type="button"
            >
              <span
                class="c10"
                data-content="button 1"
                data-testid="tab-1-text"
              >
                button 1
              </span>
            </button>
          </div>
          <div
            class="c11"
            data-testid="tab-2"
          >
            <button
              aria-controls="tab-2-panel"
              aria-selected="false"
              class="c8 c12"
              data-testid="tab-2-button"
              id="tab-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="c10"
                data-content="button 2"
                data-testid="tab-2-text"
              >
                button 2
              </span>
            </button>
          </div>
        </div>
      </div>
      <button
        aria-hidden="true"
        class="c2 c3 c13 hidden"
        tabindex="-1"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          icon-name="chevron-right"
          width="16"
        />
      </button>
    </div>
  </div>
  <div
    aria-hidden="false"
    aria-labelledby="tab-1"
    class="c14"
    id="tab-1-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-1"
    >
      content
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="tab-2"
    class="c14"
    hidden=""
    id="tab-2-panel"
    role="tabpanel"
    tabindex="0"
  >
    <div
      data-testid="tab-panel-2"
    >
      content
    </div>
  </div>
</div>
`;
